@@ -68,6 +68,8 @@ Core
 * Set new Multiple flag for checkbox, movecombo, check_nbsp and multiple
   widgets.
 
+* Log missing order reports.
+
 UserTag
 -------
 
